--- a/styles.css
+++ b/styles.css
@@ -395,8 +395,9 @@ footer ul li i:hover {
     gap: 1em;
 }
 @media only screen and (min-width: 300px) and (max-width: 767px) {
-    body {
-        background-size: 700%;
+    main {
+        background-size: 2000%;
+        background-attachment: fixed;
         
     }
 }
